rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__to_date_range_opening_mid_period.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/calendar.rs
assertion_line: 460
expression: result
---
custom_calendar__date_val_month | calendar_orders__count_month_to_date | calendar_orders__count
--------------------------------+--------------------------------------+-----------------------
2024-03-03 00:00:00+00          | 5                                    | 1                     
2024-04-07 00:00:00+00          | 4                                    | 1
