rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__to_date_retail_month_by_day.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/calendar.rs
assertion_line: 382
expression: result
---
custom_calendar__date_val_day | calendar_orders__count_month_to_date
------------------------------+-------------------------------------
2024-02-29 00:00:00+00        | 3                                   
2024-03-01 00:00:00+00        | 3                                   
2024-03-02 00:00:00+00        | 3                                   
2024-03-03 00:00:00+00        | NULL                                
2024-03-04 00:00:00+00        | NULL                                
2024-03-05 00:00:00+00        | NULL                                
2024-03-06 00:00:00+00        | NULL                                
2024-03-07 00:00:00+00        | NULL                                
2024-03-08 00:00:00+00        | 1                                   
2024-03-09 00:00:00+00        | 1
