rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__to_date_retail_week_by_day.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/calendar.rs
assertion_line: 358
expression: result
---
custom_calendar__date_val_day | calendar_orders__count_week_to_date
------------------------------+------------------------------------
2024-02-08 00:00:00+00        | 1                                  
2024-02-09 00:00:00+00        | 1                                  
2024-02-10 00:00:00+00        | 2                                  
2024-02-11 00:00:00+00        | NULL                               
2024-02-12 00:00:00+00        | NULL                               
2024-02-13 00:00:00+00        | NULL                               
2024-02-14 00:00:00+00        | NULL
